tests/ui/traits/const-traits/call-const-in-tilde-const.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-const-in-tilde-const.rs:2:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: const Foo` is not satisfied
  --> $DIR/call-const-in-tilde-const.rs:10:13
   |
LL |     const { T::foo() }
   |             ^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
